Titles now responsive but not centred correctly.

--- a/css/besiix-main.css
+++ b/css/besiix-main.css
@@ -22,6 +22,7 @@ besiix.com main stylesheet
 
 html {
 	height: 100%;
+	min-height: 210px;
 }
 
 body {
@@ -42,37 +43,37 @@ body {
 
 #leftDiv, #middleDiv, #rightDiv {
 	display: table-cell;
-	height: 100%;
 }
 
 #leftDiv {
 	background: #1A1A1A url(../images/MyComputer800.jpg) no-repeat center top;
 	background-size: auto 100%;
-	text-align: right;
 }
 
 #middleDiv {
 	background: #1A1A1A url(../images/Me800.jpg) no-repeat center top;	
 	background-size: auto 100%;
-	text-align: center;
 }
 
 #rightDiv {
 	background: #1A1A1A url(../images/Nao800.jpg) no-repeat center top;	
 	background-size: auto 100%;
-	text-align: left;
 }
 
 .categoryCover {
 	background-color: #1A1A1A;
 	height: 100%;
 	width: 100%;
+	position: relative;
 }
 
 .categoryTitle {
 	font-size: 2em;
 	line-height: 1;
 	color: white;
+	position: absolute;
+	bottom: 10%;
+	left: 35%;
 }
 
 /*=================== BANNER ===================*/
@@ -82,7 +83,7 @@ body {
 	text-align: center;
 	color: white;
 	position: absolute;
-	top: 60%;
+	top: 55%;
 	width: 100%;
 }
 
